add more css style

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -3,8 +3,7 @@ footer {
    left: 0;
    bottom: 0;
    width: 100%;
-   height: 10%;
-   background-color: red;
-   color: white;
+   height: 8%;
+   background-color: #ded1f8;
    text-align: center;
 }
