--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,5 @@
+/* Style from Pico.css https://picocss.com/docs/customization.html */
+
 /* Deep-purple Light scheme (Default) */
 /* Can be forced with data-theme="light" */
 [data-theme="light"],
@@ -34,4 +36,9 @@
   --form-element-focus-color: var(--primary-focus);
   --switch-color: var(--primary-inverse);
   --switch-checked-background-color: var(--primary);
+}
+
+/* Customized CSS*/
+:root{
+  background-color: rgba(255, 255, 255, 0.125);
 }
