added logos to footer

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -7,3 +7,10 @@ footer {
    background-color: #ded1f8;
    text-align: center;
 }
+
+img{
+   max-width: 75px;
+   max-height: 75px;
+   padding: 15px;
+   margin-top: 5px;
+}
