--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -1,9 +1,9 @@
 nav {
   background-color: #ded1f8;
-  padding: 20px;
+  padding: 2rem;
 }
 
 strong {
   color: #5e35b1;
-  font-size: 60px;
+  font-size: 3rem;
 }
