--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -3,7 +3,7 @@ footer {
    left: 0;
    bottom: 0;
    width: 100%;
-   height: 8%;
+   height: 5rem;
    background-color: #ded1f8;
    text-align: center;
 }
@@ -11,5 +11,5 @@ footer {
 .logo{
    max-width: 4rem;
    max-height: 4rem;
-   padding: 0.3rem 1rem 0 1rem;
+   padding: 0.8rem 1rem 0 1rem;
 }
