--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,8 +1,9 @@
 footer {
    position: fixed;
-   left: 0;
    bottom: 0;
    width: 100%;
+   margin-top: 2rem;
+   padding: 1rem;
    height: 5rem;
    background-color: #ded1f8;
    text-align: center;
