--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,9 @@
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
 #main {
-    margin-top: 3rem;
+  padding-bottom: 3.5rem;
+  padding-top: 2rem;
 }
