--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,16 +1,14 @@
 footer {
-   position: fixed;
-   bottom: 0;
-   width: 100%;
-   margin-top: 2rem;
-   padding: 1rem;
-   height: 5rem;
-   background-color: #ded1f8;
-   text-align: center;
+  background-color: #ded1f8;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 3.5rem;
 }
 
-.logo{
-   max-width: 4rem;
-   max-height: 4rem;
-   padding: 0.8rem 1rem 0 1rem;
+.logo {
+  max-width: 4rem;
+  max-height: 4rem;
+  padding: 0.8rem 1rem 0 1rem;
 }
