--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,44 +1,3 @@
-/* Style from Pico.css https://picocss.com/docs/customization.html */
-
-/* Deep-purple Light scheme (Default) */
-/* Can be forced with data-theme="light" */
-[data-theme="light"],
-:root:not([data-theme="dark"]) {
-  --primary: #5e35b1;
-  --primary-hover: rgba(255, 255, 255);
-  --primary-focus: rgba(94, 53, 177, 0.125);
-  --primary-inverse: #FFF;
-}
-
-/* Deep-purple Dark scheme (Auto) */
-/* Automatically enabled if user has Dark mode enabled */
-@media only screen and (prefers-color-scheme: dark) {
-  :root:not([data-theme]) {
-    --primary: #5e35b1;
-    --primary-hover: rgba(255, 255, 255);
-    --primary-focus: rgba(94, 53, 177, 0.25);
-    --primary-inverse: #FFF;
-  }
-}
-
-/* Deep-purple Dark scheme (Forced) */
-/* Enabled if forced with data-theme="dark" */
-[data-theme="dark"] {
-  --primary: #5e35b1;
-  --primary-hover: rgba(255, 255, 255);
-  --primary-focus: rgba(94, 53, 177, 0.25);
-  --primary-inverse: #FFF;
-}
-
-/* Deep-purple (Common styles) */
-:root {
-  --form-element-active-border-color: var(--primary);
-  --form-element-focus-color: var(--primary-focus);
-  --switch-color: var(--primary-inverse);
-  --switch-checked-background-color: var(--primary);
-}
-
-/* Customized CSS*/
-:root{
-  background-color: rgba(255, 255, 255, 0.125);
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
